--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
         <span>ungkapan tanda kasih</span>
         <h2>Kirim Hadiah</h2>
         <p> Doa Restu Anda merupakan karunia yang sangat berarti bagi kami.
-          Dan jika<br>memberi adalah ungkapan tanda kasih bagi keluarga dan sahabat,
-          kami dengan <br>penuh rasa syukur dan terima kasih menerima kado secara cashless.
+          Dan jika memberi adalah ungkapan tanda kasih bagi keluarga dan sahabat,
+          kami dengan penuh rasa syukur dan terima kasih menerima kado secara cashless.
         </p>
       </div>
     </div>
