--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               </div>
               <div class="col-md-6">
                 <i class="bi bi-calendar3 d-block"></i>
-                <span>Rabu, 30 April 2025</span>
+                <span>Senin & Selasa, 28 & 29 April 2025</span>
               </div>
               <div class="card-footer"> <a href="https://maps.app.goo.gl/y9BG17zdakCzFYoo9" target="_blank"
                   class="btn btn-sm my-3">Klik untuk membuka Peta</a></div>
