--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <span>30 April 2025</span>
               </div>
             </div>
-            <div class="card-footer"> <a href="https://maps.app.goo.gl/y9BG17zdakCzFYoo9" target="_blank"
+            <div class="card-footer"> <a href="https://maps.app.goo.gl/qzuFBMT1T8SeRj8VA" target="_blank"
                 class="btn btn-sm my-3">Klik untuk membuka Peta</a></div>
           </div>
         </div>
